@@ -7,6 +7,8 @@ Pint Changelog
 - Change `Quantity` and `Unit` HTML (i.e., Jupyter notebook) repr away from LaTeX to a
   simpler, more performant pretty-text and table based repr inspired by Sparse and Dask.
   (Issue #654)
+- Add `case_sensitive` option to registry for case (in)sensitive handling when parsing
+  units (Issue #1145)
 - Implement Dask collection interface to support Pint Quantity wrapped Dask arrays.
 - Started automatically testing examples in the documentation
 - Fixed right operand power for dimensionless Quantity to reflect numpy behavior. (Issue #1136)
